/**
 * Portal 对外的服务接口定义
 */

// 声明proto 协议版本
syntax = "proto3";

package com.xum.proto.portal;

// java 类所在的包名
option java_package = "com.xum.proto";
// 定义Protobuf自动生成类的类名
option java_outer_classname = "PortalProto";

/**
 * 消息类型定义
 */
enum PortalMessageType {
    MsgSetReq = 0;
    MsgSetRsp = 1;
    MsgGetReq = 2;
    MsgGetRsp = 3;
}


/**
 * Key-Value 相关的消息定义
 * 使用string 是否存在字符集的问题
 */
message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string key = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
}


/**
 * Watch 相关的消息定义
 */
message WatchCreateRequest {

}

message WatchCancelRequest {

}

message WatchResponse {

}

